--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -2,19 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/music_play.css"/>
+    <link rel="stylesheet" href="css/login.css"/>
 </head>
 <body>
-<div>
-    <div id="head"></div>
-    <div id="menu"></div>
-    <div id="message"></div>
-    <div id="music_info">aa</div>
-    <audio src="" controls="controls" id="music_player"></audio>
+<div class="container-fluid">
+    <div class="row">
+        <div id="head" class="col-xs-12">
+            畅音阁
+        </div>
+        <div id="all"class="col-xs-3">
+            <div class="col-xs-12 text-center menu">
+                <ul>
+                    <li class="list text-left row">
+                        <form class="form-inline text-center">
+                        <div class="form-group">
+                            <input type="email" class="form-control input" id="exampleInputEmail3" placeholder="搜索">
+                            <button type="submit" class="btn btn-defaults">search</button>
+                        </div>
+                        </form>
+                    </li>
+                    <li class="list">发现音乐</li>
+                    <li class="list">我的收藏</li>
+                    <li class="list">我的评论</li>
+                    <li class="list">我的分享</li>
+                    <li class="user_list">没有用户名？注册</li>
+                </ul>
+            </div>
+
+            <div>
+                <div>我是头像 用户名 </div>
+                <div>setting</div>
+            </div>
+        </div>
+        <div class="col-xs-9">
+            <div id="search"></div>
+            <div id="message">message</div>
+        </div>
+
+    </div>
+
+    <div id="music_player">
+        <div id="music_info">music</div>
+        <audio src="" controls="controls"id="audio"></audio>
+    </div>
+
 </div>
+
+
 
 </body>
 <script src="js/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
+
 <script src="js/index.js"></script>
 <script src="js/music_control.js"></script>
 </html>
