--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -7,55 +7,58 @@
     <link rel="stylesheet" href="css/login.css"/>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div id="head" class="col-xs-12">
-            畅音阁
-        </div>
-        <div id="all"class="col-xs-3">
-            <div class="col-xs-12 text-center menu">
-                <ul>
-                    <li class="list text-left row">
-                        <form class="form-inline text-center">
-                        <div class="form-group">
-                            <input type="email" class="form-control input" id="exampleInputEmail3" placeholder="搜索">
-                            <button type="submit" class="btn btn-defaults">search</button>
-                        </div>
-                        </form>
-                    </li>
-                    <li class="list">发现音乐</li>
-                    <li class="list">我的收藏</li>
-                    <li class="list">我的评论</li>
-                    <li class="list">我的分享</li>
-                    <li class="user_list">没有用户名？注册</li>
-                </ul>
-            </div>
+<iframe
+        class="framestyle"
+        id="iframepage"
+        name="iframepage"
+        frameBorder=0
+        scrolling=no
+        onLoad="iFrameHeight()"
+        src="index"
+>
+</iframe>
 
-            <div>
-                <div>我是头像 用户名 </div>
-                <div>setting</div>
-            </div>
-        </div>
-        <div class="col-xs-9">
-            <div id="search"></div>
-            <div id="message">message</div>
-        </div>
 
+
+<div class="navbar navbar-default navbar-inverse footer">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <form class="navbar-form navbar-left" role="search">
+                    <button  class="btn btn-default glyphicon glyphicon-step-backward"></button>
+                    <button  class="btn btn-default glyphicon glyphicon-play"></button>
+                    <button  class="btn btn-default glyphicon glyphicon-step-forward"></button>
+
+                </form>
+                <div class="progress barfoot">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
+                </div>
+                <li class="dropup play-list">
+                    <a class="dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        播放列表
+                        <span class="caret"></span>
+                    </a>
+
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <div id="music_player">
-        <div id="music_info">music</div>
-        <audio src="" controls="controls"id="audio"></audio>
-    </div>
-
 </div>
-
 
 
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
-
 <script src="js/index.js"></script>
 <script src="js/music_control.js"></script>
+
+
 </html>
