--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/music_play.css"/>
-    <link rel="stylesheet" href="css/login.css"/>
 </head>
 <body>
 <iframe
@@ -42,10 +41,13 @@
                     </a>
 
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li><a href="#">Separated link</a></li>
+                        <ul class="list-group">
+                            <li class="list-group-item">你不是真正的快乐</li>
+                            <li class="list-group-item">Try</li>
+                            <li class="list-group-item">斑马，斑马</li>
+                            <li class="list-group-item">鞋子特大号</li>
+                            <li class="list-group-item">本草纲目</li>
+                        </ul>
                     </ul>
                 </li>
             </ul>
