no commit message

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -22,10 +22,9 @@
 <div class="navbar navbar-default navbar-inverse footer">
     <div class="container-fluid">
         <div class="row-fluid">
-
         <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
 
-            <audio id="audio_player" src="music" controls="controls"></audio>
+            <audio id="audio_player" src="music" controls="controls" autoplay="autoplay"></audio>
 
             <ul class="nav navbar-nav ">
                 <!---->
